# ChangeLog for x11-themes/qtcurve
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve/Attic/ChangeLog,v 1.55 2009/03/21 08:20:29 yngwin Exp $

*qtcurve-0.62.5 (21 Mar 2009)

  21 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qtcurve-0.62.5.ebuild:
  Version bump

*qtcurve-0.62.4 (16 Mar 2009)

  16 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qtcurve-0.62.4.ebuild:
  Version bump

*qtcurve-0.62.2 (13 Mar 2009)

  13 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qtcurve-0.62.2.ebuild:
  Version bump

*qtcurve-0.62.0 (11 Mar 2009)

  11 Mar 2009; Ben de Groot <yngwin@gentoo.org> -qtcurve-0.59.3.ebuild,
  -qtcurve-0.59.4.ebuild, -qtcurve-0.60.0.ebuild, -qtcurve-0.61.1.ebuild,
  -qtcurve-0.61.2.ebuild, +qtcurve-0.62.0.ebuild:
  Version bump. Delete some old ones.

*qtcurve-0.61.4 (02 Mar 2009)

  02 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qtcurve-0.61.4.ebuild:
  Version bump

*qtcurve-0.61.2 (24 Feb 2009)

  24 Feb 2009; Ben de Groot <yngwin@gentoo.org> +qtcurve-0.61.2.ebuild:
  Version bump

*qtcurve-0.61.1 (20 Feb 2009)

  20 Feb 2009; Ben de Groot <yngwin@gentoo.org> +qtcurve-0.61.1.ebuild:
  Version bump

*qtcurve-0.60.0 (30 Dec 2008)

  30 Dec 2008; Ben de Groot <yngwin@gentoo.org> +qtcurve-0.60.0.ebuild:
  Version bump

  08 Nov 2008; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Stable on alpha, bug #238598

  08 Nov 2008; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Keyworded on alpha, bug #238598

  08 Nov 2008; nixnut <nixnut@gentoo.org> qtcurve-0.59.5.ebuild:
  Stable on ppc wrt bug 238598

  04 Oct 2008; Brent Baude <ranger@gentoo.org> qtcurve-0.59.5.ebuild:
  Keywording qtcurve-0.59.5 ppc64 and ~ppc for bug 238598

  30 Sep 2008; Jeroen Roovers <jer@gentoo.org> qtcurve-0.59.5.ebuild:
  Stable for HPPA (bug #238598).

  29 Sep 2008; Friedrich Oslage <bluebird@gentoo.org> qtcurve-0.59.5.ebuild:
  Stable on sparc, bug #238598
